--- a/assets/Brewfile
+++ b/assets/Brewfile
@@ -4,14 +4,11 @@ cask "skype"
 # Network / Sharing Accessibility
 cask "teamviewer"
 cask "transmit"
-cask "viscosity"
 cask "google-backup-and-sync"
 cask "cryptomator"
 
 # Media & Photography
 cask "iina"
-cask "capture-one"
-cask "affinity-photo-beta"
 cask "oceanaudio"
 
 # Development
@@ -21,8 +18,8 @@ cask "docker"
 cask "vmware-fusion"
 
 # Web Development
-cask "postman"
-cask "robo-3t"
+#cask "postman"
+#cask "robo-3t"
 
 # Extended System Capabilities
 cask "alfred"
@@ -30,8 +27,6 @@ cask "bartender"
 cask "the-unarchiver"
 cask "hyperdock"
 cask "osxfuse"
-cask "cdock"
-cask "easysimbl"
 cask "qlstephen"
 cask "qlcolorcode"
 cask "qlmarkdown"
@@ -64,7 +59,6 @@ brew "testdisk"
 brew "xz"
 brew "ripgrep"
 brew "terminal-notifier"
-brew "arp-scan"
 brew "sshfs"
 brew "translate-shell"
 brew "mosh"
@@ -75,6 +69,8 @@ brew "tree"
 brew "afl-fuzz"
 brew "arp-scan"
 brew "bettercap"
+brew "gnupg"
+brew "bettercap"
 
 # Development
 brew "llvm"
@@ -83,27 +79,29 @@ brew "source-highlight"
 brew "icdiff"
 brew "android-platform-tools"
 brew "watchman"
-brew "gdb"
+brew "pinentry-mac"
+brew "asciinema"
+brew "cheat"
+brew "tox"
+brew "credstash"
+brew "shellcheck"
+brew "pipenv"
 
 # - Python
-brew "ipython"
-brew "python"
 brew "python3"
 brew "flake8"
 
 # - Web Development
 brew "node"
+brew "yarn"
 brew "v8"
-brew "mongodb"
-brew "redis"
-brew "heroku"
+#brew "mongodb"
+#brew "redis"
+#brew "heroku"
 
 # Multimedia
 brew "ffmpeg"
 brew "mpv"
 brew "lame"
-brew "x264"
 brew "x265"
-brew "xvid"
 brew "sox"
-
