Fix package category

--- a/assets/Brewfile
+++ b/assets/Brewfile
@@ -21,6 +21,7 @@ cask "visual-studio-code"
 cask "docker"
 cask "vmware-fusion"
 cask "webstorm"
+cask "android-platform-tools"
 
 # Web Development
 #cask "postman"
@@ -82,7 +83,6 @@ brew "llvm"
 brew "cmake"
 brew "source-highlight"
 brew "icdiff"
-brew "android-platform-tools"
 brew "watchman"
 brew "pinentry-mac"
 brew "asciinema"
