Fix package name

--- a/assets/Brewfile
+++ b/assets/Brewfile
@@ -93,7 +93,7 @@ brew "shellcheck"
 brew "pipenv"
 brew "gdb"
 brew "micro"
-brew "pinetree"
+brew "pinentry"
 brew "credstash"
 brew "bfg"
 brew "shellcheck"
