Add Java package cause of bfg dependency

--- a/assets/Brewfile
+++ b/assets/Brewfile
@@ -22,6 +22,7 @@ cask "docker"
 cask "vmware-fusion"
 cask "webstorm"
 cask "android-platform-tools"
+cask "java"
 
 # Web Development
 #cask "postman"
